<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <EditText
            android:id="@+id/textEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/textToHex" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroupMain"
                android:layout_width="match_parent"
                android:layout_height="110dp">

                <RadioButton
                    android:id="@+id/byteRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/byteRadioBtn" />

                <RadioButton
                    android:id="@+id/contRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contRadioBtn" />

                <RadioButton
                    android:id="@+id/xRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xRadioBtn" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/secondActBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/secondActBtn" />
        </LinearLayout>

        <Button
            android:id="@+id/thirdActBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirdActBtn" />

        <TextView
            android:id="@+id/hexToTxtResultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hexToTxtResultView"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>