<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thridActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/hexEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hexEditText"
            android:textSize="24sp" />

        <Button
            android:id="@+id/firstActReturnBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstActReturnBtn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="241dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/incrementBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/incrementBtn"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/countTextView"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_weight="1"
                android:text="@string/countTextView"
                android:textSize="64sp" />

            <Button
                android:id="@+id/decrementBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DecrementBtn"
                android:textSize="32sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>